--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <link rel="icon" href="%VITE_INDEX_API_URL%api/v2/portal/favicon.ico">
+    <link rel="icon" href="https://www.axa.com/static/favicon.ico?version=3.29.0">
     <title>Developer Portal</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="stylesheet" href="%VITE_INDEX_API_URL%api/v2/portal/stylesheet/font.css" type="text/css">
