feat(index): add noindex tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="robots" content="noindex">
 
     <link rel="icon" href="%VITE_INDEX_API_URL%api/v2/portal/favicon.ico">
     <title>Developer Portal</title>
